# bkdnaioj

./: .gitignore  PRODUCT_UI_UX_SPEC.md  README.md  ai-contest-database-design-specification.md  deploy-all-in-one.md  docker-compose.prod.yml  measurement_driven_capability_scheduling_detailed_v2.md
backend/: .env.example  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  sqlc.yaml
backend/db/: admin.sql.go  comms.sql.go  contests.sql.go  entries.sql.go  evaluation_set_assets.sql.go  evaluation_sets.sql.go  experiment_observability.sql.go  job_execution_logs.sql.go  leaderboards.sql.go  mock.go  models.go  password_reset.sql.go  phase_defs.sql.go  phases.sql.go  querier.go  stats.sql.go  submission_files.sql.go  submissions.sql.go  task_assets.sql.go  tasks.sql.go  teams.sql.go  users.sql.go  volunteer_worker_claims.sql.go  volunteer_workers.sql.go
backend/demo/: bench_setup.py  k6_leaderboard_bench.js  leaderboard_benchmark.py  scheduling_benchmark.py
backend/migrations/: 20260415000001_init_users_teams.sql  20260415000002_contests_tasks_phases.sql  20260415000003_contest_entries.sql  20260415000004_submissions_jobs.sql  20260415000005_leaderboards_comms.sql  20260512101650_phase_assets.sql  20260512143000_evaluation_sets.sql  20260522180000_add_scale_scores_to_contests.sql  20260522190000_add_raw_score_to_leaderboard_entries.sql  20260522200000_task_assets.sql  20260526093000_make_announcements_contest_id_nullable.sql  20260531224000_volunteer_workers.sql  20260601120000_volunteer_worker_claims.sql  20260602010000_add_job_execution_logs.sql  20260604100000_global_phase_rankings.sql  20260604200000_add_predicted_finish_at.sql  20260605100000_add_username_and_password_reset.sql  20260606110000_worker_claim_leases.sql  20260606113000_job_execution_resource_profile.sql  20260606120000_team_member_status.sql  20260606130000_penalty_minutes.sql  20260610180000_experiment_observability.sql  20260616120000_fix_phase_def_cascade.sql
backend/queries/: admin.sql  comms.sql  contests.sql  entries.sql  evaluation_set_assets.sql  evaluation_sets.sql  experiment_observability.sql  job_execution_logs.sql  leaderboards.sql  password_reset.sql  phase_defs.sql  phases.sql  stats.sql  submission_files.sql  submissions.sql  task_assets.sql  tasks.sql  teams.sql  users.sql  volunteer_worker_claims.sql  volunteer_workers.sql
backend/scripts/: dev_smoke_lean_v1.sh  seed_lean_v1.sql
backend/workers/: Dockerfile  pyproject.toml
backend/workers/app/: config.py  db.py  logging.py  main.py  queue.py  runner.py  storage.py  worker_judge.py
backend/workers/demo/: README.txt
backend/workers/demo/contestant/final/: infer.py
backend/workers/demo/contestant/public/: predictions.csv
backend/workers/demo/datasets/: public_ground_truth.csv  public_inputs.csv
backend/workers/demo/organizer/public/: judge.py
backend/workers/tests/: test_contract_runner.py
docs/: judging-contract.md
draft/: E2E_TESTING_GUIDE.md
draft/adversarial_attack/: generate_assets.py  test_judge.py
draft/contract-driven-demo/: README.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
load-tests/: run-all.sh
load-tests/fixtures/: submission_zhvi.csv
load-tests/k6/: 01-baseline.js  02-read-load.js  03-submit-wave-zhvi.js  04-submit-wave-sudoku.js  05-mixed-realistic.js  06-spike.js  07-final-submission.js  config.js  helpers.js
plans/260415-1507-olpai-backend-design/: 00-plan-overview.md  phase-01-database-schema.md  phase-02-api-specification.md  phase-03-worker-architecture.md  phase-04-go-project-scaffold.md  phase-05-queue-protocol.md  phase-06-artifacts-presigned-upload.md
runtime/: Dockerfile  requirements.txt
stitch/: admin-dashboard.html  clarifications.html  contest-detail.html  homepage.html  leaderboard.html  submission-page.html
supabase/: config.toml
volunteer-agent/: Dockerfile  README.md  pyproject.toml
volunteer-agent/app/: artifact_cache.py  capabilities.py  cli.py  client.py  config.py  main.py  runner.py  service.py  storage.py  worker_judge.py
volunteer-agent/demo/: sandbox_benchmark.py
volunteer-agent/demo/scripts/: benign_sklearn.py  fork_bomb.py  infinite_loop.py  mem_bomb.py
volunteer-agent/olpai_volunteer_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
volunteer-agent/tests/: test_runner.py  test_worker_judge.py
(+264 files in other folders)
