[project]
name = "olpai-volunteer-agent"
version = "0.1.0"
description = "Volunteer judge worker agent for OLPAI"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "psutil>=5.9",
    "structlog>=24.0,<26",
    "typer>=0.12",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
gpu = ["pynvml>=11.0"]
docker = ["docker>=7.0"]

[project.scripts]
olpai-volunteer = "app.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
