[project]
name = "olpai-volunteer-agent"
version = "0.2.6"
description = "Volunteer judge worker agent for OLPAI"
requires-python = ">=3.11"
dependencies = [
    # Agent infrastructure
    "httpx>=0.27",
    "psutil>=5.9",
    "structlog>=24.0,<26",
    "typer>=0.12",
    # Judge script dependencies (same as official worker)
    "numpy>=1.26,<3",
    "Pillow>=10,<12",
    "sacrebleu>=2.3,<3",
    # Final inference sandbox
    "docker>=7.0",
]

[project.optional-dependencies]
# GPU detection — only needed on machines with NVIDIA GPU
gpu = ["nvidia-ml-py>=12.0"]

[project.scripts]
olpai-volunteer = "app.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
