[project]
name = "olpai-volunteer-agent"
version = "0.2.17"
description = "Volunteer judge worker agent for OLPAI"
requires-python = ">=3.11"
dependencies = [
    # Agent infrastructure
    "httpx>=0.27",
    "psutil>=5.9",
    "structlog>=24.0,<26",
    "typer>=0.12",
    # Judge script dependencies — mirrors contest environment (Bảng 1)
    # ML & NLP
    "torch>=2.0",
    "tensorflow>=2.15",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "catboost>=1.2",
    "transformers>=4.40",
    "spacy>=3.7",
    "nltk>=3.8",
    "gensim>=4.3",
    "fasttext-wheel>=0.9.2",
    # Data processing
    "pandas>=2.0",
    "numpy>=1.26,<2",
    "scipy>=1.11",
    # Image processing
    "opencv-python-headless>=4.8",
    "Pillow>=10,<12",
    "torchvision>=0.17",
    "scikit-image>=0.22",
    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "autoviz>=0.1.9",
    # Utilities
    "joblib>=1.3",
    "datasets>=2.18",
    "evaluate>=0.4",
    "pytorch-lightning>=2.2",
    "tensorboard>=2.16",
    "tqdm>=4.66",
    "sacrebleu>=2.3,<3",
    # Final inference sandbox
    "docker>=7.0",
]

[project.optional-dependencies]
# GPU detection — only needed on machines with NVIDIA GPU
gpu = ["nvidia-ml-py>=12.0"]

[project.scripts]
olpai-volunteer = "app.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
