[project]
name = "olpai-workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  # Infrastructure
  "redis>=5.0,<6",
  "psycopg[binary]>=3.1,<4",
  "structlog>=24.0,<26",
  "minio>=7.2,<8",
  "docker>=7.0.0",
  # Judge script dependencies (common across contest problems)
  "numpy>=1.26,<3",
  "Pillow>=10,<12",
  "sacrebleu>=2.3,<3",
]

[project.scripts]
olpai-worker = "app.main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
