[project]
name = "olpai-workers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  # Infrastructure
  "redis>=5.0,<6",
  "psycopg[binary]>=3.1,<4",
  "structlog>=24.0,<26",
  "minio>=7.2,<8",
  "docker>=7.0.0",
  # Contest runtime dependencies
  "torch>=2.0",
  "tensorflow>=2.15",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "catboost>=1.2",
  "transformers>=4.40",
  "spacy>=3.7",
  "nltk>=3.8",
  "gensim>=4.3",
  "fasttext-wheel>=0.9.2",
  "pandas>=2.0",
  "numpy>=1.26,<2",
  "scipy>=1.11",
  "opencv-python-headless>=4.8",
  "Pillow>=10,<12",
  "torchvision>=0.17",
  "scikit-image>=0.22",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "plotly>=5.18",
  "autoviz>=0.1.9",
  "joblib>=1.3",
  "datasets>=2.18",
  "evaluate>=0.4",
  "pytorch-lightning>=2.2",
  "tensorboard>=2.16",
  "tqdm>=4.66",
  "sacrebleu>=2.3,<3",
]

[project.scripts]
olpai-worker = "app.main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
